ProjetCompil/Verif/Test/fail/errSyntaxe.cas
program
   A : 1..5;
   B : real;
begin
    --pas d'instruction
end.